src/style/7-vendor/_uikit-custom.scss
// 1. Your custom variables and variable overwrites.

// $global-font-family: $font-headings;
$base-heading-font-family: $font-headings;

// $global-emphasis-color: #333;
// $global-color: #666;
// $global-inverse-color: #fff;
// $global-muted-background: #f8f8f8;
$global-primary-background: $color-primary-background; // #1e87f0;
// $global-success-background: #32d296;
$global-warning-background: $color-warning; // #faa05a;
$global-danger-background: $color-danger; // #f0506e;
// $global-muted-color: #999;
// $global-background: #fff;
// $global-secondary-background: #222;
$global-link-color: $color-link; // #1e87f0;
// $global-link-hover-color: #0f6ecd;
// $base-ins-background: #ffd;
// $base-mark-background: #ffd;
$global-border: $color-primary; // #e5e5e5;
// $base-selection-background: #39f;
// $form-select-option-color: #444;
// $lightbox-background: #000;
// $lightbox-toolbar-icon-hover-color: #fff;
// $lightbox-button-hover-color: #fff;
// $table-row-active-background: #ffd;
// $tooltip-background: #666;
// $box-shadow-bottom-background: #444;

$button-primary-color: #222;
$button-primary-hover-color: #222;
$button-primary-active-color: #222;

// 2. Import default variables and available mixins.
@import '~uikit/src/scss/variables-theme';
@import '~uikit/src/scss/mixins-theme';

// 3. Your custom mixin overwrites.

@mixin hook-navbar-container() {
    background-color: $global-secondary-background;
}

@mixin hook-navbar-nav-item() {
    border-bottom: 4px solid rgb(0, 0, 0, 0);
    color: #ccc;
    font-family: $font-headings;
    font-size: 1.2rem;
    letter-spacing: 0.1rem;
    transition: 100ms all ease-in-out;
}

@mixin hook-navbar-nav-item-hover() {
    background-color: #000;
    border-bottom: 4px solid $global-border;
    transition: 100ms all ease-in-out;
}

@mixin hook-navbar-nav-item-active() {
    background-color: #000;
    border-bottom: 4px solid $global-border;
    transition: 100ms all ease-in-out;
}

// 4. Import UIkit.
@import '~uikit/src/scss/uikit-theme';

